Fixed #36331 -- Reverted "Fixed #36055 -- Prevented overlap of object-tools buttons and page header in the admin."
This reverts commits b1324a680add78de24c763911d0eefa19b9263bc and
02a5cbfe76382da2a0414df17017185be5bd47f9. The former caused a regression
in admin sites that relied on the `object-tools` block being inside the
`content` block.

Thank you to Fabian Braun for the report.

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -465,10 +465,6 @@ input[type="submit"], button {
         margin-left: 15px;
     }
 
-    .object-tools:has(a.addlink) {
-        margin-top: 0px;
-    }
-
     /* Forms */
 
     .form-row {
